# agent-tools

./: Cargo.toml  README.md
config/: services.example.toml
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/agent-tools/src/base/: cmd.rs
crates/agent-tools/src/error/: mod.rs  tools.rs
crates/agent-tools/src/special/: codex.rs  mod.rs  web_search.rs
crates/web-server/: Cargo.toml  README.md
crates/web-server/API_DOCS/: CONFIG.md  HEALTH.md  README.md  TOOLS.md
crates/web-server/src/: dto.rs  error.rs  main.rs  settings.rs  state.rs
crates/web-server/src/handlers/: health.rs
crates/web-server/src/handlers/tools/: web_search.rs
crates/web-server/src/routes/: mod.rs  tools.rs
src/: lib.rs
src/base/: cmd.rs
src/error/: mod.rs  tools.rs
src/special/: codex.rs  web_search.rs
