[package]
name = "agent-tools"
version = "0.1.0"
edition = "2024"
description = "Lightweight command and Codex-powered tool helpers for Rust agents"
license = "MIT"
authors = ["Ancient"]
readme = "README.md"
repository = "https://github.com/atlas-orien/agent-tools.git"
documentation = "https://docs.rs/agent-tools"
homepage = "https://github.com/atlas-orien/agent-tools"
keywords = ["agent", "command", "codex", "tools", "web-search"]
categories = ["command-line-interface", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "src/**",
]


[dependencies]
thiserror = "2"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
