[workspace]
members = [
    "crates/agent-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
description = "Lightweight command and Codex-powered tool helpers for Rust agents"
license = "MIT"
authors = ["Atlas Orien <gamesworldcraft@gmail.com>"]
repository = "https://github.com/atlas-orien/agent-tools.git"
documentation = "https://docs.rs/agent-tools"
homepage = "https://github.com/atlas-orien/agent-tools"
keywords = ["agent", "command", "codex", "tools", "web-search"]
categories = ["command-line-interface", "development-tools"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[workspace.dependencies]
thiserror = "2"
wait-timeout = "0.2"
tempfile = "3.27.0"
