[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
description = "Lightweight command and Codex-powered tool helpers for Rust agents"
license = "MIT"
authors = ["Atlas Orien <gamesworldcraft@gmail.com>"]
repository = "https://github.com/atlas-orien/agent-tools.git"
documentation = "https://docs.rs/agent-tools"
homepage = "https://github.com/atlas-orien/agent-tools"
keywords = ["agent", "command", "codex", "tools", "web-search"]
categories = ["command-line-interface", "development-tools"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[workspace.dependencies]
agent-tools = { path = "crates/agent-tools" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
toolcraft-axum-kit = "0.2"
toolcraft-config = "0.2"
wait-timeout = "0.2"
